--- a/models/staging/jaffle_shop/src_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/src_jaffle_shop.yml
@@ -2,6 +2,7 @@ version: 2
 
 sources:
   - name: jaffle_shop
+    description: a clone of a Postgres application database
     database: raw
     schema: jaffle_shop
     loaded_at_field: _etl_loaded_at
@@ -15,13 +16,16 @@ sources:
 
     tables:
       - name: customers
+        description: raw customers data
         columns: 
           - name: id
+            description: primary key for customers data
             tests:
               - unique
               - not_null
         freshness: null        
       - name: orders
+        description: raw orders data
         columns: 
           - name: id
             tests:
